--- a/styles/iconsfont.css
+++ b/styles/iconsfont.css
@@ -34,6 +34,10 @@
 }
 .icon-cube_icon:before {
   content: "\e901";
+  color: white;
+  font-size: 60px;
+  margin-top: 15px;
+  margin-right: 15px;
 }
 .icon-mix_icon::before {
   content: "\e902";
@@ -58,9 +62,17 @@
 }
 .icon-people_icon:before {
   content: "\e905";
+  color: white;
+  font-size: 60px;
+  margin-top: 15px;
+  margin-right: 15px;
 }
 .icon-person_icon:before {
   content: "\e906";
+  color: white;
+  font-size: 60px;
+  margin-top: 15px;
+  margin-right: 15px;
 }
 .icon-phone_icon:before {
   content: "\e907";
@@ -71,10 +83,22 @@
 }
 .icon-scroll_icon:before {
   content: "\e908";
+  color: white;
+  font-size: 60px;
+  margin-top: 15px;
+  margin-right: 15px;
 }
 .icon-tools_icon:before {
   content: "\e909";
+  color: white;
+  font-size: 60px;
+  margin-top: 15px;
+  margin-right: 15px;
 }
 .icon-van_icon:before {
   content: "\e90a";
+  color: white;
+  font-size: 60px;
+  margin-top: 15px;
+  margin-right: 15px;
 }
