--- a/styles/main.css
+++ b/styles/main.css
@@ -185,7 +185,8 @@ body {
 
 
 .slide3 {
-    background-image:  url('../images/slide3back.png'); 
+    /* background-image:  url('../images/slide3back.png'); */
+    background-color: #f1f2f7;
     max-width: 1920px;
     height: 757px;
     /* display: flex;   */
@@ -595,4 +596,618 @@ body {
     background: linear-gradient(90deg, rgba(41,49,126,1) 0%, rgba(28,34,81,1) 100%);
     max-width: 1920px;
     height: 149px;
+}
+
+
+/* ================= MEDIA MEDIA MEDIA ================== */
+/* ================= MEDIA MEDIA MEDIA ================== */
+/* ================= MEDIA MEDIA MEDIA ================== */
+/* ================= MEDIA MEDIA MEDIA ================== */
+/* ================= MEDIA MEDIA MEDIA ================== */
+/* ================= MEDIA MEDIA MEDIA ================== */
+/* ================= MEDIA MEDIA MEDIA ================== */
+/* ================= MEDIA MEDIA MEDIA ================== */
+
+
+
+@media only screen and (max-width: 375px) {
+
+
+    .wrapper {
+        max-width: 341px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    
+    .wrapper2 {
+        max-width: 341px;
+        margin-left: auto;
+        margin-right: auto;
+        display: flex;
+        flex-wrap: wrap;
+    }
+    
+    
+    /* ============ 1 SLIDE 1 ============ */
+    
+    .slide1 {
+        background: linear-gradient(90deg, rgba(41,49,126,1) 0%, rgba(28,34,81,1) 100%);
+        max-width: 375px;
+        height: 1031px;
+        display: flex;    
+    }
+    
+    .header {
+        width: 100%;
+        height: 75px;
+        display: flex;
+        justify-content: space-between;
+        align-items: baseline;
+        padding-top: 5px;
+        padding-bottom: 5px;
+    }
+    
+    .header .logo {
+        color: white;
+        font-size: 32px;
+        font-weight: bolder;
+        margin-top: auto;
+        margin-bottom: auto;
+    }
+    
+    .header .number {
+        color: white;
+        font-size: 22px;
+        margin-top: auto;
+        margin-bottom: auto;
+    }
+
+    .header .number > span {
+        display: none;
+    }
+    
+    .slide1_content {
+        width: 100%;
+        height: 910px;
+        display: flex;
+        flex-wrap: wrap;
+        
+    }
+    
+    .slide1_header {
+        width: 100%;
+        margin-top: 50px;
+    }
+    
+    .slide1_header .slide1_h_w {
+        font-size: 25px;
+        font-weight: bolder;
+        color: white;
+    }
+    
+    .slide1_header .slide1_h_y {
+        font-size: 25px;
+        font-weight: bolder;
+        color: #F2A04A;
+    }
+    
+    .slide1_button {
+        width: 100%;
+        bottom: 100px;
+    }
+    
+    .slide1_button > p {
+        font-size: 18px;
+        color: white;
+    }
+    
+    .slide1_button > p > img {
+        margin-right: 10px;
+    }
+    
+    
+    .button1 {
+        height: 58px;
+        width: 280px;
+        margin-top: 60px;
+        border-radius: 100px;
+        border-color:#F2A04A;
+        color: white;
+        border-style: solid;
+        border-width: 3px;
+        background: none;
+        cursor: pointer;
+    }
+
+    .adaptivepic {
+        background-image: url('../images/Slide1_img_2.png');
+    }
+    
+    .slide1_picture {
+        display: none;
+    }
+    
+    .pic1 {
+        display: none;
+    }
+    
+    
+    
+    /* ============ 2 SLIDE 2 ============ */
+    
+    
+    
+    .slide2 {
+        /* background-image: url('../images/Slide1back.png'); */
+        max-width: 375px;
+        height: 775px;
+         
+    }
+    
+    .slide2_button {
+        width: 100%;
+        margin-top: 30px;
+    }
+    
+    .slide2_button > h1 > span {
+        color: #F2A04A;
+        font-weight: bolder;
+    }
+    
+    .slide2_button > h1 {
+        font-weight: bolder;
+    }
+    
+    .slide2_button > p {
+        margin-top: 19px;
+        margin-bottom: 19px;
+    }
+    
+    .button2 {
+        height: 58px;
+        width: 280px;
+        margin-top: 32px;
+        border-radius: 100px;
+        border-color:#F2A04A;
+        color: white;
+        border-style: solid;
+        border-width: 3px;
+        background:#F2A04A;
+        cursor: pointer;
+    }
+    
+    .slide2_picture {
+        width: 50px;
+        margin-top: 50px;
+    }
+    
+    .slide2_button > p {
+        font-size: 16px;
+    }
+
+    .slide2_button > p:nth-child(-n+3) {
+        display: none;
+    }
+    
+    
+    /* ============ 3 SLIDE 3 ============ */
+    
+    
+    
+    .slide3 {
+        /* background-image:  url('../images/slide3back.png'); */
+        background-color: #f1f2f7;
+        max-width: 1920px;
+        height: 757px;
+        /* display: flex;   */
+    }
+    
+    .slide3_button {
+        width: 100%;
+        margin: 50px 0;
+    }
+    
+    .slide3_button > h1 > span {
+        color: #F2A04A;
+        font-weight: bolder;
+    }
+    
+    .slide3_button > h1 {
+        font-weight: bolder;
+    }
+    
+    .slide3_picture {
+        width: 100%;
+       /* position: relative; */
+    }
+    
+    .pic3 {
+        width: 100%;
+        margin-left: -70px;
+       /* position: absolute;
+        left: -73px; */
+    }
+    
+    
+    
+    /* ============ 4 SLIDE 4 ============ */
+    
+    
+    
+    .slide4 {
+        background: linear-gradient(90deg, rgba(41,49,126,1) 0%, rgba(28,34,81,1) 100%);
+        /* background-image: url('../images/Slide1back.png'); */
+        max-width: 1920px;
+        height: 806px;
+        display: flex;    
+    }
+    
+    .slide4_button {
+        width: 50%;
+        margin: 50px 0;
+    }
+    
+    .slide4_button > h1 > span {
+        color: #F2A04A;
+        font-weight: bolder;
+        font-size: 36px;
+        
+    }
+    
+    .slide4_button > h1 {
+        font-weight: bolder;
+        color: white;
+        margin: 50px 0;
+    }
+    
+    .slide4_button > p {
+        font-size: 18px;
+        color: white;
+        margin: 30px 0;
+    }
+    
+    .specp {
+        color: white;
+        font-size: 14px;
+        margin: 50px 0;
+    }
+    
+    .hdollars {
+        color: white;
+        font-size: 48px;
+        margin: 50px 0;
+        font-weight: bolder;
+    }
+    
+    .hdollars > sup {
+        color:#F2A04A;
+        font-size: 30px;
+        margin: 50px 0;
+        font-weight: bolder;
+    }
+    
+    .slide4_picture {
+        width: 50%;
+        margin-top: 200px;
+    }
+    
+    
+    
+    /* ============ 5 SLIDE 5 ============ */
+    
+    
+    
+    .slide5 {
+        max-width: 1920px;
+        height: 716px;
+         
+    }
+    
+    .slide5_button {
+        width: 100%;
+        margin: 50px 0;
+    }
+    
+    .slide5_button > h1 > span {
+        color: #F2A04A;
+        font-weight: bolder;
+    }
+    
+    .slide5_button > h1 {
+        font-weight: bolder;
+    }
+    
+    .slide5_button_p {
+        margin-top: 19px;
+        margin-bottom: 19px;
+        font-size: 18px;
+        width: 75%;
+    }
+    
+    .slide5_icons {
+        width: 100%;
+        margin: 30px 0;
+        display: flex;
+        justify-content: space-evenly;
+        align-items: baseline;
+    }
+    
+    .slide5_sep_icon {
+        width: 25%;
+    }
+    
+    .slide5_sep_icon > h1 {
+        font-size: 26px;
+    }
+    
+    .slide5_sep_icon > p {
+        font-size: 18px;
+    }
+    
+    
+    
+    /* ============ 6 SLIDE 6 ============ */
+    
+    
+    
+    .slide6 {
+        background: linear-gradient(90deg, rgba(41,49,126,1) 0%, rgba(28,34,81,1) 100%);
+        /* background-image: url('../images/Slide1back.png'); */
+        max-width: 1920px;
+        height: 1080px;
+        display: flex;    
+    }
+    
+    
+    .slide6_button {
+        width: 100%;
+        margin: 50px 0;
+    }
+    
+    .slide6_button > h1 > span {
+        color: #F2A04A;
+        font-weight: bolder;
+        font-size: 36px;
+        
+    }
+    
+    .slide6_button > h1 {
+        font-weight: bolder;
+        color: white;
+        margin: 50px 0;
+        font-size: 26px;
+    }
+    
+    .slide6_icons {
+        width: 100%;
+        display: flex;
+        flex-wrap: wrap;
+    }
+    
+    .slide6_icons1 {
+        width: 100%;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around;
+    }
+    
+    .slide6_sep_icon {
+        width: 25%;
+        margin: 15px;
+        padding: 5px;
+    }
+    
+    .slide6_sep_icon > h1 {
+        font-size: 26px;
+        color: #F2A04A;
+    }
+    
+    .slide6_sep_icon > p {
+        font-size: 18px;
+        color: white;
+    }
+    
+    
+    
+    /* ============ 7 SLIDE 7 ============ */
+    
+    
+    
+    .slide7 {
+        background: white;
+        /* background-image: url('../images/Slide1back.png'); */
+        max-width: 1920px;
+        height: 586px;
+        display: flex;
+    
+    }
+    
+    .slide7_button {
+        width: 100%;
+        margin: 50px 0;
+    }
+    
+    .slide7_icons1 {
+        margin-bottom: 80px;
+        display: flex;
+        flex-wrap: wrap;
+    }
+    
+    .slide7_sep_icon {
+        width: 33%;
+        text-align: center;
+    }
+    
+    .slide7_button > h1 > span {
+        color: #F2A04A;
+        font-weight: bolder;
+        font-size: 36px;
+        
+    }
+    
+    .slide7_button > h1 {
+        font-weight: bolder;
+        color: black;
+        margin: 20px 0;
+        font-size: 36x;
+    }
+    
+    
+    
+    .slide7_sep_icon > img {
+        font-size: 26px;
+        color: #F2A04A;
+        border-radius: 100%;
+        width: 60%;
+        height: 60%;
+    }
+    
+    .slide7_sep_icon > h1 {
+        font-size: 20px;
+        color: black;
+    }
+    
+    .slide7_sep_icon > div {
+        background-color: #F2A04A;
+        width: 30px;
+        height: 3px;
+        margin-left: 45%;
+    }
+    
+    .slide7_sep_icon > p {
+        font-size: 16px;
+        color: black;
+    }
+    
+    
+    
+    /* ============ 8 SLIDE 8 ============ */
+    
+    
+    
+    .slide8 {
+        background: linear-gradient(90deg, rgba(41,49,126,1) 0%, rgba(28,34,81,1) 100%);
+        /* background-image: url('../images/Slide1back.png'); */
+        max-width: 1920px;
+        height: 318px;
+        display: flex;    
+    }
+    
+    
+    .slide8_button {
+        width: 100%;
+        margin-top: 50px;
+    }
+    
+    .slide8_button > h1 > span {
+        color: #F2A04A;
+        font-weight: bolder;
+        font-size: 36px;
+        
+    }
+    
+    .slide8_button > h1 {
+        font-weight: bolder;
+        color: white;
+        margin: 30px 0;
+        font-size: 36px;
+    }
+    
+    
+    .slide8_icons {
+        display: flex;
+        flex-wrap: wrap;
+        align-items: baseline;
+    
+    }
+    
+    .slide8_sep_icon {
+        margin-bottom: 20px;
+    }
+    
+    .slide8_sep_icon > p {
+        font-size: 18px;
+        color: white;
+        width: 50%;
+        
+    }
+    
+    .slide8_button2 {
+        width: 25%;
+    
+    }
+    
+    .slide8_2_button2 {
+        height: 58px;
+        width: 280px;
+        margin-top: 32px;
+        border-radius: 100px;
+        border-color:#F2A04A;
+        color: white;
+        border-style: solid;
+        border-width: 3px;
+        background:#F2A04A;
+        cursor: pointer;
+    
+    }
+    
+    
+    
+    /* ============ 9 SLIDE 9 ============ */
+    
+    
+    
+    .slide9 {
+        background-image: url('../images/slide9.png');
+        max-width: 1920px;
+        height: 520px;
+        position: relative; 
+    }
+    
+    .slide9_mini_block {
+        background: linear-gradient(90deg, rgba(41,49,126,1) 0%, rgba(28,34,81,1) 100%);
+        max-width: 465px;
+        max-height: 201px;
+        padding: 1%;
+        position: absolute;
+        left: 133px;
+        top: 104px;
+    }
+    
+    .slide9_button {
+        width: 100%;
+        margin-top: 50px;
+    }
+    
+    .slide9_button > h1 > span {
+        color: #F2A04A;
+        font-weight: bolder;
+        font-size: 36px;
+        
+    }
+    
+    .slide9_button > h1 {
+        font-weight: bolder;
+        color: white;
+        margin: 1%;
+        font-size: 36px;
+    }
+    
+    .slide9_mini_block > p {
+        color: white;
+        font-size: 18px;
+    }
+    
+    
+    /* ============ 10 SLIDE 10 ============ */
+    
+    
+    .slide10 {
+        background: linear-gradient(90deg, rgba(41,49,126,1) 0%, rgba(28,34,81,1) 100%);
+        max-width: 1920px;
+        height: 149px;
+    }
+
+
+
 }
